--- a/Snake/pom.xml
+++ b/Snake/pom.xml
@@ -42,12 +42,26 @@
             <artifactId>exec-maven-plugin</artifactId>
         </plugin>
         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.10</version>
+            <executions>
+              <execution>
+                <id>default-test</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <configuration>
+                  <argLine>-Xmx2048m</argLine>
+                </configuration>
+              </execution>
+            </executions>
             <configuration>
-                <argLine>-Xmx2048m</argLine>
+              <argLine>-Xmx2048m</argLine>
+                <forkCount>1</forkCount>
+                <reuseForks>true</reuseForks>
             </configuration>
-        </plugin>
+          </plugin>
         <plugin>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
@@ -57,6 +71,19 @@
                     <id>default-prepare-agent</id>
                     <goals>
                         <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>default-report</id>
+                    <phase>prepare-package</phase>
+                    <goals>
+                        <goal>report</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>default-check</id>
+                    <goals>
+                        <goal>check</goal>
                     </goals>
                 </execution>
             </executions>
